<resources>
    <string name="app_name">Quiz</string>
    <string name="questionText">Question</string>
    <string name="btnOdpTrue">True</string>
    <string name="btnOdpFalse">False</string>
    <string name="questionCurMaxNumber">2/6</string>
    <string name="btnPrev">⬅️ Prev</string>
    <string name="btnNext">Next ➡️</string>
    <string name="btnCheat">Cheat</string>
    <string name="add_question">Add question</string>
    <string name="title_activity_cheater">Cheater</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cheatedOdp">\??????</string>
    <string name="btnShowAns">Show Correct Answer</string>
    <string name="search_web">Search web</string>
    <string name="dodaj">Add</string>
    <string name="reset">Reset</string>
    <string name="go_back">Go back</string>
    <string name="show_answer">Show Answer</string>
    <string name="uzyskano">Score</string>
    <string name="poprawnych_opdowiedzi">"Correct answers: "</string>
    <string name="Cheated">"Cheated: "</string>
</resources>