<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionTextShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionText"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOdpTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOdpTrue"/>

        <Button
            android:id="@+id/btnOdpFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnOdpFalse"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPrev"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"/>

    </LinearLayout>

    <TextView
        android:id="@+id/questionCurMaxNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questionCurMaxNumber"/>

    <Button
        android:id="@+id/btnCheat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCheat"/>

</LinearLayout>